--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bio faqasap</title>
+    <title>bio angel dust</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -326,13 +326,10 @@ Profile ready in 3s...</code></pre>
         <div class="quote">
           «You caress me, and then you stomp on me. You're opening my soul and making me look like a fool! Did I describe our relationship, Tyler?!»
         </div>
-       
-            </a>
             <a href="https://t.me/qhoxelly" class="social-button" target="_blank">
                 <i class="fab fa-telegram"></i>
                 <span>My p.m</span>
             </a>
-        </div>
     </div>
 
     <button class="scroll-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
