--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             align-items: center;
             font-family: 'Orbitron', sans-serif;
             color: white;
-            background: linear-gradient(135deg, rgba(26, 26, 26, 0.5), rgba(20, 60, 80, 0.5)), url('https://i.postimg.cc/dtBcjTn6/IMG-20250412-190832-048.jpg') no-repeat center center/cover;
+            background: linear-gradient(135deg, rgba(26, 26, 26, 0.5), rgba(20, 60, 80, 0.5)), url('https://i.postimg.cc/Y2sVT52Z/photo-2025-07-07-18-16-50.jpg') no-repeat center center/cover;
             animation: moveBackground 20s infinite alternate;
         }
 
@@ -298,7 +298,7 @@
             <span class="yellow"></span>
             <span class="green"></span>
         </div>
-        <h3 class="card-title">Welcome to bio faqasap</h3>
+        <h3 class="card-title">Welcome to bio nns</h3>
         <p class="card-description">Loading profile information...</p>
         <span class="card-tag">v1.0.0</span>
         <div class="code-editor">
@@ -311,7 +311,7 @@ Profile ready in 3s...</code></pre>
 
     <!-- Main Content -->
     <div class="content-container" id="mainContent" style="display: none;">
-        <img src="https://a.imgfoto.host/2025/06/26/photo_2025-06-26_10-22-52.jpeg" alt="Аватар" class="avatar">
+        <img src="https://i.postimg.cc/mrZWT7v5/photo-2025-07-08-07-10-56.jpg" alt="Аватар" class="avatar">
         <h2>bio angel dust</h2>
         <p>
             About me:
