--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             position: absolute;
             width: 40px;
             height: 40px;
-            background-image: url('https://i.postimg.cc/Hx22dyCB/7e065cb41f995b4387de76b4f0379d34.jpg');
+            background-image: url('https://i.postimg.cc/6qMYLGjy/i-2.webp');
             background-size: contain;
             background-repeat: no-repeat;
             opacity: 0.7;
